versions/0.27.0/_sources/refs/_aws-cdk_aws-amazonmq.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"DZaGfgZCji+4g2WhTs5tZymGy/SKcOIquipCI0htgiY="}

@aws-cdk/aws-amazonmq
=====================

.. mdinclude:: ./__aws-cdk_aws-amazonmq.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AmazonMQ/0.27.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AmazonMQ" Version="0.27.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AmazonMQ --version 0.27.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AmazonMQ" version="0.27.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/amazonmq/0.27.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:amazonmq:jar:0.27.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="amazonmq" rev="0.27.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>amazonmq</artifactId>
           <version>0.27.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:amazonmq:0.27.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='amazonmq', version='0.27.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-amazonmq/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-amazonmq@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-amazonmq": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-amazonmq@0.27.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-amazonmq/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-amazonmq@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-amazonmq": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-amazonmq@0.27.0



.. py:module:: @aws-cdk/aws-amazonmq

CfnBroker
^^^^^^^^^

.. py:class:: CfnBroker(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AmazonMQ;

      .. code-tab:: java

         import software.amazon.awscdk.services.amazonmq.CfnBroker;

      .. code-tab:: javascript

         const { CfnBroker } = require('@aws-cdk/aws-amazonmq');

      .. code-tab:: typescript

         import { CfnBroker } from '@aws-cdk/aws-amazonmq';



   A CloudFormation `AWS::AmazonMQ::Broker`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-amazonmq.CfnBrokerProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: brokerAmqpEndpoints

      :type: string[] *(readonly)*


   .. py:attribute:: brokerArn

      :type: string *(readonly)*


   .. py:attribute:: brokerConfigurationId

      :type: string *(readonly)*


   .. py:attribute:: brokerConfigurationRevision

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: brokerId

      :type: string *(readonly)*


   .. py:attribute:: brokerIpAddresses

      :type: string[] *(readonly)*


   .. py:attribute:: brokerMqttEndpoints

      :type: string[] *(readonly)*


   .. py:attribute:: brokerOpenWireEndpoints

      :type: string[] *(readonly)*


   .. py:attribute:: brokerStompEndpoints

      :type: string[] *(readonly)*


   .. py:attribute:: brokerWssEndpoints

      :type: string[] *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-amazonmq.CfnBrokerProps`\  *(readonly)*

   .. py:class:: ConfigurationIdProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnBroker.ConfigurationIdProperty;

         .. code-tab:: javascript

            // CfnBroker.ConfigurationIdProperty is an interface

         .. code-tab:: typescript

            import { CfnBroker.ConfigurationIdProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: id

         `CfnBroker.ConfigurationIdProperty.Id`



         :type: string *(readonly)*


      .. py:attribute:: revision

         `CfnBroker.ConfigurationIdProperty.Revision`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:class:: LogListProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnBroker.LogListProperty;

         .. code-tab:: javascript

            // CfnBroker.LogListProperty is an interface

         .. code-tab:: typescript

            import { CfnBroker.LogListProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: audit

         `CfnBroker.LogListProperty.Audit`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: general

         `CfnBroker.LogListProperty.General`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: MaintenanceWindowProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnBroker.MaintenanceWindowProperty;

         .. code-tab:: javascript

            // CfnBroker.MaintenanceWindowProperty is an interface

         .. code-tab:: typescript

            import { CfnBroker.MaintenanceWindowProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: dayOfWeek

         `CfnBroker.MaintenanceWindowProperty.DayOfWeek`



         :type: string *(readonly)*


      .. py:attribute:: timeOfDay

         `CfnBroker.MaintenanceWindowProperty.TimeOfDay`



         :type: string *(readonly)*


      .. py:attribute:: timeZone

         `CfnBroker.MaintenanceWindowProperty.TimeZone`



         :type: string *(readonly)*


   .. py:class:: TagsEntryProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnBroker.TagsEntryProperty;

         .. code-tab:: javascript

            // CfnBroker.TagsEntryProperty is an interface

         .. code-tab:: typescript

            import { CfnBroker.TagsEntryProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: key

         `CfnBroker.TagsEntryProperty.Key`



         :type: string *(readonly)*


      .. py:attribute:: value

         `CfnBroker.TagsEntryProperty.Value`



         :type: string *(readonly)*


   .. py:class:: UserProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnBroker.UserProperty;

         .. code-tab:: javascript

            // CfnBroker.UserProperty is an interface

         .. code-tab:: typescript

            import { CfnBroker.UserProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: password

         `CfnBroker.UserProperty.Password`



         :type: string *(readonly)*


      .. py:attribute:: username

         `CfnBroker.UserProperty.Username`



         :type: string *(readonly)*


      .. py:attribute:: consoleAccess

         `CfnBroker.UserProperty.ConsoleAccess`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: groups

         `CfnBroker.UserProperty.Groups`



         :type: string[] *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnBrokerProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnBrokerProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AmazonMQ;

      .. code-tab:: java

         import software.amazon.awscdk.services.amazonmq.CfnBrokerProps;

      .. code-tab:: javascript

         // CfnBrokerProps is an interface

      .. code-tab:: typescript

         import { CfnBrokerProps } from '@aws-cdk/aws-amazonmq';



   Properties for defining a `AWS::AmazonMQ::Broker`





   .. py:attribute:: autoMinorVersionUpgrade

      `AWS::AmazonMQ::Broker.AutoMinorVersionUpgrade`



      :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: brokerName

      `AWS::AmazonMQ::Broker.BrokerName`



      :type: string *(readonly)*


   .. py:attribute:: deploymentMode

      `AWS::AmazonMQ::Broker.DeploymentMode`



      :type: string *(readonly)*


   .. py:attribute:: engineType

      `AWS::AmazonMQ::Broker.EngineType`



      :type: string *(readonly)*


   .. py:attribute:: engineVersion

      `AWS::AmazonMQ::Broker.EngineVersion`



      :type: string *(readonly)*


   .. py:attribute:: hostInstanceType

      `AWS::AmazonMQ::Broker.HostInstanceType`



      :type: string *(readonly)*


   .. py:attribute:: publiclyAccessible

      `AWS::AmazonMQ::Broker.PubliclyAccessible`



      :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: users

      `AWS::AmazonMQ::Broker.Users`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-amazonmq.CfnBroker.UserProperty`\ )[] *(readonly)*


   .. py:attribute:: configuration

      `AWS::AmazonMQ::Broker.Configuration`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-amazonmq.CfnBroker.ConfigurationIdProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: logs

      `AWS::AmazonMQ::Broker.Logs`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-amazonmq.CfnBroker.LogListProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: maintenanceWindowStartTime

      `AWS::AmazonMQ::Broker.MaintenanceWindowStartTime`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-amazonmq.CfnBroker.MaintenanceWindowProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: securityGroups

      `AWS::AmazonMQ::Broker.SecurityGroups`



      :type: string[] *(optional)* *(readonly)*


   .. py:attribute:: subnetIds

      `AWS::AmazonMQ::Broker.SubnetIds`



      :type: string[] *(optional)* *(readonly)*


   .. py:attribute:: tags

      `AWS::AmazonMQ::Broker.Tags`



      :type: :py:class:`~@aws-cdk/aws-amazonmq.CfnBroker.TagsEntryProperty`\ [] *(optional)* *(readonly)*


CfnConfiguration
^^^^^^^^^^^^^^^^

.. py:class:: CfnConfiguration(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AmazonMQ;

      .. code-tab:: java

         import software.amazon.awscdk.services.amazonmq.CfnConfiguration;

      .. code-tab:: javascript

         const { CfnConfiguration } = require('@aws-cdk/aws-amazonmq');

      .. code-tab:: typescript

         import { CfnConfiguration } from '@aws-cdk/aws-amazonmq';



   A CloudFormation `AWS::AmazonMQ::Configuration`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-amazonmq.CfnConfigurationProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: configurationArn

      :type: string *(readonly)*


   .. py:attribute:: configurationId

      :type: string *(readonly)*


   .. py:attribute:: configurationRevision

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-amazonmq.CfnConfigurationProps`\  *(readonly)*

   .. py:class:: TagsEntryProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnConfiguration.TagsEntryProperty;

         .. code-tab:: javascript

            // CfnConfiguration.TagsEntryProperty is an interface

         .. code-tab:: typescript

            import { CfnConfiguration.TagsEntryProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: key

         `CfnConfiguration.TagsEntryProperty.Key`



         :type: string *(readonly)*


      .. py:attribute:: value

         `CfnConfiguration.TagsEntryProperty.Value`



         :type: string *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnConfigurationAssociation
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnConfigurationAssociation(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AmazonMQ;

      .. code-tab:: java

         import software.amazon.awscdk.services.amazonmq.CfnConfigurationAssociation;

      .. code-tab:: javascript

         const { CfnConfigurationAssociation } = require('@aws-cdk/aws-amazonmq');

      .. code-tab:: typescript

         import { CfnConfigurationAssociation } from '@aws-cdk/aws-amazonmq';



   A CloudFormation `AWS::AmazonMQ::ConfigurationAssociation`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-amazonmq.CfnConfigurationAssociationProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: configurationAssociationId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-amazonmq.CfnConfigurationAssociationProps`\  *(readonly)*

   .. py:class:: ConfigurationIdProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AmazonMQ;

         .. code-tab:: java

            import software.amazon.awscdk.services.amazonmq.CfnConfigurationAssociation.ConfigurationIdProperty;

         .. code-tab:: javascript

            // CfnConfigurationAssociation.ConfigurationIdProperty is an interface

         .. code-tab:: typescript

            import { CfnConfigurationAssociation.ConfigurationIdProperty } from '@aws-cdk/aws-amazonmq';





      .. py:attribute:: id

         `CfnConfigurationAssociation.ConfigurationIdProperty.Id`



         :type: string *(readonly)*


      .. py:attribute:: revision

         `CfnConfigurationAssociation.ConfigurationIdProperty.Revision`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnConfigurationAssociationProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnConfigurationAssociationProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AmazonMQ;

      .. code-tab:: java

         import software.amazon.awscdk.services.amazonmq.CfnConfigurationAssociationProps;

      .. code-tab:: javascript

         // CfnConfigurationAssociationProps is an interface

      .. code-tab:: typescript

         import { CfnConfigurationAssociationProps } from '@aws-cdk/aws-amazonmq';



   Properties for defining a `AWS::AmazonMQ::ConfigurationAssociation`





   .. py:attribute:: broker

      `AWS::AmazonMQ::ConfigurationAssociation.Broker`



      :type: string *(readonly)*


   .. py:attribute:: configuration

      `AWS::AmazonMQ::ConfigurationAssociation.Configuration`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-amazonmq.CfnConfigurationAssociation.ConfigurationIdProperty`\  *(readonly)*


CfnConfigurationProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnConfigurationProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AmazonMQ;

      .. code-tab:: java

         import software.amazon.awscdk.services.amazonmq.CfnConfigurationProps;

      .. code-tab:: javascript

         // CfnConfigurationProps is an interface

      .. code-tab:: typescript

         import { CfnConfigurationProps } from '@aws-cdk/aws-amazonmq';



   Properties for defining a `AWS::AmazonMQ::Configuration`





   .. py:attribute:: data

      `AWS::AmazonMQ::Configuration.Data`



      :type: string *(readonly)*


   .. py:attribute:: engineType

      `AWS::AmazonMQ::Configuration.EngineType`



      :type: string *(readonly)*


   .. py:attribute:: engineVersion

      `AWS::AmazonMQ::Configuration.EngineVersion`



      :type: string *(readonly)*


   .. py:attribute:: name

      `AWS::AmazonMQ::Configuration.Name`



      :type: string *(readonly)*


   .. py:attribute:: description

      `AWS::AmazonMQ::Configuration.Description`



      :type: string *(optional)* *(readonly)*


   .. py:attribute:: tags

      `AWS::AmazonMQ::Configuration.Tags`



      :type: :py:class:`~@aws-cdk/aws-amazonmq.CfnConfiguration.TagsEntryProperty`\ [] *(optional)* *(readonly)*


